# height-axis-grounding-diagnostics

./: .env.example  .gitignore  LICENSE.md  README.md  pyproject.toml
data/package_drawings/: README.md  image_manifest.csv  image_manifest.json
data/tasks/package_target_extraction/: README.md  cases.json  ground_truth.json  ground_truth.template.json
data/tasks/pcb_face_axis_mapping/: README.md  cases.json  ground_truth.json  ground_truth.template.json  prompt.md
data/tasks/pure_ocr_extraction/: README.md  cases.json  ground_truth.json  ground_truth.template.json
scripts/: import_notion_package_drawings.py  package_target_analyze_run.py  package_target_build_cases.py  package_target_run_benchmark.py  package_target_validate_ground_truth.py  pcb_face_axis_analyze_run.py  pcb_face_axis_build_cases.py  pcb_face_axis_run_benchmark.py  pcb_face_axis_validate_ground_truth.py  pure_ocr_analyze_run.py  pure_ocr_build_cases.py  pure_ocr_run_benchmark.py  pure_ocr_validate_ground_truth.py  top_view_analyze_run.py  top_view_build_cases.py  top_view_run_benchmark.py  top_view_validate_ground_truth.py  view_role_analyze_run.py  view_role_build_cases.py  view_role_run_benchmark.py  view_role_validate_ground_truth.py
spec/: README.md
spec/experiment_claims/: README.md  package_target_extraction.md  pcb_face_axis_mapping.md  pure_ocr_extraction.md  top_view_localization.md  view_role_classification.md
spec/implementation/: package_target_extraction.md  pcb_mounting_face_axis_mapping.md  pure_ocr_extraction.md  top_view_localization.md  view_role_classification.md
(+44 files in other folders)
